--- a/src/components/custom button/custom-button.styles.scss
+++ b/src/components/custom button/custom-button.styles.scss
@@ -13,11 +13,18 @@
     font-weight: bolder;
     border: none;
     cursor: pointer;
+    display: flex;
+    justify-content: center;
   
     &:hover {
       background-color: white;
       color: black;
       border: 1px solid black;
+    }
+    &.inverted{
+        background-color: white;
+        color: black;
+        border: 1px solid black;
     }
   }
   
